# osmo

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.syncml  README.windows  TRANSLATORS  aclocal.m4  config.h.in  configure  configure.ac  zrelease
data/: Makefile.am  Makefile.in  osmo.1  osmo.desktop
data/icons/: Makefile.in
data/icons/16x16/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.am  Makefile.in
data/icons/scalable/: Makefile.am  Makefile.in
data/pixmaps/: Makefile.am  Makefile.in
data/sounds/: Makefile.am  Makefile.in
data/utils/: README  osmo.nsi  osmo.vim  w2o.pl
po/: Makefile.am  Makefile.in  README  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  lt.po  nl.po  osmo.pot  pl.po  pt.po  ru.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  Makefile.in  about.c  about.h  backup.c  backup.h  calendar.c  calendar.h  calendar_calc.c  calendar_calc.h  calendar_fullyear.c  calendar_fullyear.h  calendar_ical.c  calendar_ical.h  calendar_jumpto.c  calendar_jumpto.h  calendar_moon.h  calendar_notes.c  calendar_notes.h  calendar_preferences_gui.c  calendar_preferences_gui.h  calendar_print.c  calendar_print.h  calendar_timeline.c  calendar_timeline.h  calendar_utils.c  calendar_utils.h  calendar_widget.c  calendar_widget.h  check_events.c  check_events.h  contacts.c  contacts.h  contacts_birthdays.c  contacts_birthdays.h  contacts_export.c  contacts_export.h  contacts_import.c  contacts_import.h  contacts_import_csv.c  (+50 more)
